{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 112,
  "lineage": "de578a42-82b6-97c2-d1ef-5833f5f8e1d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bec1f6598d80d2cd",
            "arn": "arn:aws:ec2:us-east-1:540001570801:instance/i-0b9272e1aebc050f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9272e1aebc050f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "2222",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f5191e22d6369ce",
            "private_dns": "ip-192-168-1-174.ec2.internal",
            "private_ip": "192.168.1.174",
            "public_dns": "ec2-54-224-222-36.compute-1.amazonaws.com",
            "public_ip": "54.224.222.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0871b1cc36aa6f622",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081103a0a8fbbf4d2",
            "tags": {
              "Name": "ion-WebApp1"
            },
            "tags_all": {
              "Name": "ion-WebApp1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07813ab3820f4e67f"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.WebServer",
            "aws_subnet.PublicAZA",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:internet-gateway/igw-0c913588ca78a246c",
            "id": "igw-0c913588ca78a246c",
            "owner_id": "540001570801",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0d6d14967574512f4"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:route-table/rtb-085db552aa8eb2cbf",
            "id": "rtb-085db552aa8eb2cbf",
            "owner_id": "540001570801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c913588ca78a246c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ion_route"
            },
            "tags_all": {
              "Name": "ion_route"
            },
            "vpc_id": "vpc-0d6d14967574512f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01015e50f66a9a22f",
            "route_table_id": "rtb-085db552aa8eb2cbf",
            "subnet_id": "subnet-081103a0a8fbbf4d2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RT",
            "aws_subnet.PublicAZA",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:security-group/sg-07813ab3820f4e67f",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07813ab3820f4e67f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "WebServer",
            "name_prefix": "",
            "owner_id": "540001570801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer-SG"
            },
            "tags_all": {
              "Name": "WebServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d14967574512f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:subnet/subnet-0a952bee8a878573c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0a952bee8a878573c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540001570801",
            "tags": {
              "Name": "2a-PrivateSubnet"
            },
            "tags_all": {
              "Name": "2a-PrivateSubnet"
            },
            "vpc_id": "vpc-0d6d14967574512f4"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:subnet/subnet-0fa7ef9665880f280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0fa7ef9665880f280",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540001570801",
            "tags": {
              "Name": "2b-PrivateSubnet"
            },
            "tags_all": {
              "Name": "2b-PrivateSubnet"
            },
            "vpc_id": "vpc-0d6d14967574512f4"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:subnet/subnet-081103a0a8fbbf4d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-081103a0a8fbbf4d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540001570801",
            "tags": {
              "Name": "2a-PublicSubnet"
            },
            "tags_all": {
              "Name": "2a-PublicSubnet"
            },
            "vpc_id": "vpc-0d6d14967574512f4"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:subnet/subnet-03b592c8de6f2eee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-03b592c8de6f2eee9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540001570801",
            "tags": {
              "Name": "2b-PublicSubnet"
            },
            "tags_all": {
              "Name": "2b-PublicSubnet"
            },
            "vpc_id": "vpc-0d6d14967574512f4"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540001570801:vpc/vpc-0d6d14967574512f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0dc55dcc381de6a35",
            "default_route_table_id": "rtb-00cd00722a5cab0ab",
            "default_security_group_id": "sg-080bdf6c407e1f143",
            "dhcp_options_id": "dopt-7a121c00",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6d14967574512f4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00cd00722a5cab0ab",
            "owner_id": "540001570801",
            "tags": {
              "Name": "ion-vpc"
            },
            "tags_all": {
              "Name": "ion-vpc"
            }
          }
        }
      ]
    }
  ]
}